--- a/html-form-ux.css
+++ b/html-form-ux.css
@@ -1,20 +1,53 @@
-			input.visa {
-				background-image: url(visa.jpg);
-				background-position: right;
-				background-repeat: no-repeat;
-			}
-			input.americanexpress {
-				background-image: url(americanexpress.gif);
-				background-position: right;
-				background-repeat: no-repeat;
-			}
-			input.discover {
-				background-image: url(discover.jpg);
-				background-position: right;
-				background-repeat: no-repeat;
-			}
-			input.dinersclub {
-				background-image: url(dinersclub.jpg);
-				background-position: right;
-				background-repeat: no-repeat;
-			}
+/*input.visa,*/
+li.visa {
+	background-image: url(visa.jpg);
+	background-position: right;
+	background-repeat: no-repeat;
+}
+/*input.americanexpress,*/
+li.americanexpress {
+	background-image: url(americanexpress.gif);
+	background-position: right;
+	background-repeat: no-repeat;
+}
+/*input.discover,*/
+li.discover {
+	background-image: url(discover.jpg);
+	background-position: right;
+	background-repeat: no-repeat;
+}
+/*input.dinersclub,*/
+li.dinersclub {
+	background-image: url(dinersclub.jpg);
+	background-position: right;
+	background-repeat: no-repeat;
+}
+
+.accepted_cards li {
+  display: inline-block; *display: inline; zoom: 1;
+  width: 40px;
+  height: 25px;
+  list-style: none;
+}
+
+.discover li,
+.visa li,
+.dinersclub li,
+.americanexpress li {
+  -moz-opacity: 0.5;
+  -webkit-opacity: 0.5;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+}
+
+.discover .discover,
+.visa .visa,
+.dinersclub .dinersclub,
+.americanexpress .americanexpress {
+  -moz-opacity: 1.0;
+  -webkit-opacity: 1.0;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
+  opacity: 1.0;
+}
